<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/intention_course_select_bg"
    android:padding="15dip"
   	>
	<TextView 
	    android:id="@+id/score_confirm_info"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="20dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/score_confirm_info"    
	    android:layout_centerHorizontal="true"
	    android:textSize="16dip"
	    android:textColor="@color/black"
	/>
	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:layout_marginTop="20dip"
		android:layout_marginBottom="20dip"
		android:layout_below="@+id/score_confirm_info"
	>
	    <Button 
		    android:id="@+id/score_confirm_yes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_yes"
			android:background="@drawable/filter_but_l_s"
		/>
		<Button 
		    android:id="@+id/score_confirm_no"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_no"
			android:background="@drawable/filter_but_r"
		/>
	</LinearLayout>
</RelativeLayout>