<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical"
		android:id="@+id/filter_expand">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:background="@drawable/list_item_bg"
			android:clickable="true" android:orientation="vertical">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/title_bar"
				android:id="@+id/teacherinfo_tab">
				<ImageButton android:id="@+id/subject_search_back"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_centerVertical="true" android:background="@drawable/button_background_back" />
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/subject_info_top_title"
					android:textColor="#fff" android:textSize="24sp"
					android:layout_centerInParent="true" />
				<!-- <Button android:id = "@+id/online_read_filter" android:layout_width 
					= "wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" 
					android:layout_alignParentRight="true" android:text="@string/filter_sign_up" 
					android:textColor="#fff" android:background="@drawable/button_background_3" 
					/> -->
				<ImageButton android:layout_toLeftOf="@+id/online_read_filter"
					android:id="@+id/subject_rating_btn" android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true" android:layout_marginRight="5dip"
					android:background="@drawable/button_background_7" />
			</RelativeLayout>
			<RelativeLayout android:layout_width="fill_parent"
				android:id="@+id/subjectinfo_xq" android:layout_height="wrap_content"
				android:paddingLeft="10dip" android:paddingRight="10dip"
				android:paddingTop="20dip" android:paddingBottom="20dip">
				<LinearLayout android:orientation="vertical"
					android:layout_width="wrap_content" android:layout_marginLeft="10dp"
					android:id="@+id/subject_left_title" android:layout_height="wrap_content">
					<TextView android:id="@+id/subject_name"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textColor="@color/text_color_title" android:textSize="18sp"
						android:layout_marginBottom="10dp" android:text="@string/subject_name" />

					<TextView android:id="@+id/subject_fit"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/subject_suit" android:textColor="@color/black"
						android:textSize="16sp" />

					<TextView android:id="@+id/subject_fit_info"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="14sp" android:textColor="@color/text_color_field_content"
						android:text="大学生" />
					<TextView android:id="@+id/subject_introduction"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="16sp" android:textColor="@color/black"
						android:text="@string/subject_info_info" />
					<TextView android:id="@+id/subject_introduction_info"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="14sp" android:textColor="@color/text_color_field_content"
						android:text="这课程好好" />
				</LinearLayout>
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:padding="10dip"
					android:layout_marginTop="10dip" android:gravity="center"
					android:layout_below="@id/subject_left_title">
					<Button android:id="@+id/filter_instructional_videos"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:background="@drawable/filter_but_l_s" android:textColor="#fff"
						android:text="@string/subject_info_instructional_videos" />
					<Button android:id="@+id/filter_read_online"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textColor="#7F7130" android:background="@drawable/filter_but_c"
						android:text="@string/subject_info_read_online" />
					<Button android:id="@+id/filter_online_test"
						android:layout_width="wrap_content" android:textColor="#7F7130"
						android:layout_height="wrap_content" android:background="@drawable/filter_but_r"
						android:text="@string/subject_info_online_test" />
				</LinearLayout>
			</RelativeLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="0dip" android:layout_weight="1"
				android:orientation="vertical" android:background="#fff"
				android:gravity="top">
				<RelativeLayout android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<LinearLayout android:id="@+id/subjectinfo_info_button_bar"
						android:layout_width="match_parent" android:layout_height="wrap_content"
						style="@style/eduins_traffic" android:layout_marginTop="2dip"
						android:background="@drawable/video_filter_bar" />
					<LinearLayout android:id="@+id/subjectinfo_ll_address"
						android:layout_below="@+id/subjectinfo_info_button_bar"
						android:layout_width="match_parent" android:layout_height="fill_parent"
						style="@style/subject_place">
						<include android:id="@+id/inc_data_loading" layout="@layout/list_view_layout" />
					</LinearLayout>
					<Button android:id="@+id/filter_address"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:background="@drawable/button_4" android:textColor="@color/text_color_green"
						android:text="@string/subject_info_place"
						android:layout_marginLeft="15dip" android:paddingLeft="4dip"
						android:paddingRight="4dip" android:textSize="16sp" />
				</RelativeLayout>
			</LinearLayout>

		</LinearLayout>
	</LinearLayout>
</RelativeLayout> 
