<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent" android:background="#fff">
	<LinearLayout android:id="@+id/filter_content"
		android:layout_width="wrap_content" android:layout_height="fill_parent"
		android:orientation="horizontal" android:paddingRight="95dip"
		android:visibility="gone">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:background="@drawable/filter_list_title_bar"
				android:gravity="center_vertical" android:orientation="horizontal">
				<TextView android:id="@+id/filter_nav"
					android:layout_width="0dip" android:layout_height="wrap_content"
					android:text="@string/subject_top_nav" android:paddingLeft="20dip"
					android:textSize="16sp" android:layout_weight="1"
					android:textColor="@color/white" />
				<ImageView android:layout_width="14dip"
					android:background="@drawable/nav_rigth" android:layout_height="fill_parent" />
			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				  android:layout_height="fill_parent"  android:background="@drawable/background_nav"
				android:orientation="vertical">

				<ExpandableListView android:id="@+id/nav_elv"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:groupIndicator="@null" android:clickable="true"
					android:dividerHeight="0dip" android:divider="@null" 
					  android:cacheColorHint="@color/translucent"     
					android:layout_marginRight="0dip" />
					 
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<erb.unicomedu.ui.FilterExpand
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:id="@+id/filter_expand">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent" android:background="@drawable/list_item_bg"
			android:clickable="true" android:orientation="vertical">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="@style/title_bar">
				<Button android:id="@+id/online_read_filter"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_centerVertical="true" android:text="@string/filter_name"
					android:background="@drawable/button_background_3" />
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/read_info_top"
					android:textColor="#fff" android:textSize="24sp"
					android:layout_centerInParent="true" />
			  <ImageButton android:id="@+id/search_value"
					android:layout_width="wrap_content" android:layout_height="wrap_content" 
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true" android:background="@drawable/button_background_search" />
			</RelativeLayout>
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" android:padding="10dip"
				android:gravity="center" android:background="@drawable/filter_bar">
				<Button android:id="@+id/filter_latest" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:background="@drawable/filter_but_l_s" android:textColor="#fff" 
					android:text="@string/filter_latest" />
				<Button android:id="@+id/filter_popularity"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#7F7130" 
					android:background="@drawable/filter_but_c" android:text="@string/filter_popularity" />
				<Button android:id="@+id/filter_price" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:background="@drawable/filter_but_r" android:textColor="#7F7130" 
					android:text="@string/filter_price" />
			</LinearLayout>
			<include android:id="@+id/inc_data_loading" layout="@layout/list_view_layout" />
		</LinearLayout>
	</erb.unicomedu.ui.FilterExpand>
	<erb.unicomedu.ui.MenuControl
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" />
</RelativeLayout>