<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/background"
	android:gravity="center">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" style="@style/title_bar"
		android:id="@+id/title_bar">
		<ImageButton android:id="@+id/title_back"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_centerVertical="true" android:background="@drawable/button_background_back" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/login_title_name"
			android:textColor="#fff" android:textSize="24sp"
			android:layout_centerInParent="true" />
	</RelativeLayout>
	<LinearLayout android:id="@+id/login_content"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1" android:orientation="vertical"
		android:gravity="center" android:padding="20dip">
		<!-- name -->
		<LinearLayout android:id="@+id/login_content_name_layer"
			android:layout_width="fill_parent" android:layout_height="wrap_content"  
			style="@style/login_edit_layer" android:background="@drawable/background_top_round">
			<ImageView android:id="@+id/login_name_icon"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/reg_name" android:layout_marginRight="10dip" />

			<EditText
			    android:id="@+id/login_name"
			    style="@style/login_name"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionNext" 
			    android:singleLine="true" />

		</LinearLayout>
		<!-- password -->
		<LinearLayout android:id="@+id/login_content_password_layer"
			android:layout_width="fill_parent" android:layout_height="wrap_content"   
			style="@style/login_edit_layer" android:background="@drawable/background_bottom_round">
			<ImageView android:id="@+id/login_password_icon"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/reg_pass" android:layout_marginRight="10dip" />

			<EditText
			    android:id="@+id/login_password"
			    style="@style/login_password"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionGo|actionDone" 
			    android:singleLine="true" >
			    <requestFocus />
			</EditText>

		</LinearLayout>

		<!-- check box -->
		<LinearLayout android:id="@+id/login_check_layer"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/login_check_layer">
			<CheckBox android:id="@+id/login_save_password"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1" style="@style/login_checkbox"
				android:text="@string/login_save_password" />
			<CheckBox android:id="@+id/login_auto_in"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				style="@style/login_checkbox" android:text="@string/login_auto_in" />
		</LinearLayout>

		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_margin="10dip"
			android:id="@+id/login_in" android:text="@string/login_in"
			android:background="@drawable/button_background_1" />
		<Button android:id="@+id/login_registered"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_margin="10dip" android:text="@string/login_registered"
			android:background="@drawable/button_background_2" />
	</LinearLayout>
	<LinearLayout android:layout_marginTop="30dip"
		android:layout_marginBottom="30dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="center">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/logo_operators"
			android:layout_marginRight="10dip" />
		<TextView android:id="@+id/login_operators"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/logo_operators_name" android:textSize="16sp" />
	</LinearLayout>
</LinearLayout>
